--- a/templates/user/ripe_selesai.html
+++ b/templates/user/ripe_selesai.html
@@ -8,14 +8,20 @@
 </header>
 
 <nav class="riwayat-nav" role="navigation" aria-label="Riwayat navigation">
-  <a href="/ripe_menunggu_konfirmasi" class="riwayat-link"
+  <a href="{{ url_for('ripe_menunggu_konfirmasi') }}" class="riwayat-link"
     >Menunggu Konfirmasi</a
   >
-  <a href="/riwayat_pemesanan" class="riwayat-link">Telah Dikonfirmasi</a>
-  <a href="/ripe_diproses" class="riwayat-link">Diproses</a>
-  <a href="#" class="riwayat-link riwayat-active" aria-current="page"
+  <a href="{{ url_for('riwayat_pemesanan') }}" class="riwayat-link"
+    >Telah Dikonfirmasi</a
+  >
+  <a href="{{ url_for('ripe_diproses') }}" class="riwayat-link">Diproses</a>
+  <a
+    href="{{ url_for('ripe_selesai') }}"
+    class="riwayat-link riwayat-active"
+    aria-current="page"
     >Selesai</a
   >
+  <a href="{{ url_for('ripe_dibatalkan') }}" class="riwayat-link">Dibatalkan</a>
 </nav>
 
 <!-- Isi-->
@@ -39,9 +45,14 @@
       </div>
       <div
         class="riwayat-status"
+        style="color: #6c757d"
         aria-label="Riwayat status Belum Bayar Deposit"
       >
-        <div class="riwayat-status-dot" aria-hidden="true"></div>
+        <div
+          class="riwayat-status-dot"
+          style="background-color: #6c757d"
+          aria-hidden="true"
+        ></div>
         {{ p.status_pesanan }}
       </div>
     </header>
@@ -298,7 +309,7 @@
       <button
         class="riwayatpemesanan-btn-primary"
         type="button"
-        onclick="window.location.href='/formulasan'"
+        onclick="window.location.href='{{ url_for('formulasan', pesanan_id=p._id) }}'"
       >
         Nilai
       </button>
